# NestBoxMonitoring

./: .gitignore
gui-app/: CMakeLists.txt
gui-app/src/: imageviewerdialog.cpp  imageviewerdialog.h  imageviewerdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
pi/: CMakeLists.txt
pi/src/: CameraNode.cpp  CameraNode.hpp  main.cpp
